# Programmerbar_last

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  sdkconfig  sdkconfig.old
Python/: request.py
doxygen/html/: adc_8c.html  adc_8c.js  adc_8c_source.html  adc_8h.html  adc_8h.js  adc_8h_source.html  dir_2101cd0b22112584ff59816a4bc911f7.html  dir_2101cd0b22112584ff59816a4bc911f7.js  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_bad007344d42f4b5340fab5412b591e5.html  dir_bad007344d42f4b5340fab5412b591e5.js  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html  main_8c.js  main_8c_source.html  navtreedata.js  navtreeindex0.js
doxygen/latex/: adc_8c.tex  adc_8c_source.tex  adc_8h.tex  adc_8h_source.tex  dir_2101cd0b22112584ff59816a4bc911f7.tex  files.tex  main_8c.tex  (+4 more)
main/: CMakeLists.txt  config.h  globals.h  main.c
main/communication/http_server/: http_server.c  http_server.h
main/communication/influxdb/: influxdb.c
main/communication/wifi/: wifi.c  wifi.h
main/drivers/FT81x/: FT812.c  FT812.h
main/drivers/adc/: adc.c  adc.h
main/drivers/i2c/: i2c.c  i2c.h
main/drivers/pwm/: pwm.c  pwm.h
main/drivers/spi/: FT812.c  FT812.h  spi.c  spi.h
main/include/: I2C.h  LCD.h  QSPI.h  SPI.h  adc.h  control.h  measurements.h  web_server.h  wifi.h
main/src/: I2C.c  LCD.c  SPI.c  adc.c  control.c  measurements.c  rtc_time.c  uart.c  web_server.c  wifi.c
main/tasks/communication_task/: communication_task.c  communication_task.h
main/tasks/control_task/: control_task.c  control_task.h
main/tasks/hmi_task/: hmi_task.c  hmi_task.h
main/tasks/measurement_task/: measurement_task.c  measurement_task.h
main/tasks/safety_task/: safety_task.c  safety_task.h
test_files/: ADC_test.c  I2C_test.c  LCD.test.c  PWM_test.c  SDM_test.c  SPI.c  SPI_display_test.c  SPI_first_test.c  SPI_slave_code_arduino.ino  SPI_test.c  SPI_test_2.c  freeRTOS.c  http_test.c
tools/: init_esp_idf.bat
web_server/: web_interface.html  web_interface_2.html  web_interface_3.html
(+19 files in other folders)
